# lithogen

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md
.github/: CODE_OF_CONDUCT.md
.github/workflows/: buildtest.yml  cmake-multi-platform.yml
app/shaders/: fragment.glsl  vertex.glsl
cmake/: deps.cmake
include/: camera.h  compilation.h  config.h  constants.h  entity.h  image.h  model.h  preview.h  render.h
res/: resource.rc
res/shaders/: fragment.glsl  vertex.glsl
src/: camera.cpp  camera.h  compilation.cpp  compilation.h  config.h  constants.h  control.cpp  control.h  display.cpp  display.h  display_data.cpp  display_data.h  entity.cpp  entity.h  image.h  interface.cpp  interface.h  main.cpp  matrix_math.cpp  matrix_math.h  menu.cpp  menu.h  model.h  preview.cpp  render.cpp  render.h  vertex.h
src/classes/: camera.cpp  camera.h  display_data.cpp  display_data.h  entity.cpp  entity.h  menu_config.h  vertex.h
src/declarations/: constants.h  structures.h
src/renderer/: camera.cpp  camera.h  entity.cpp  entity.h  render.cpp  render.h
